--- a/sql-server/package.json
+++ b/sql-server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3"
   }
 }
